rounded corners placeholder voor de input

--- a/html/index.html
+++ b/html/index.html
@@ -40,6 +40,7 @@
                     type="text"
                     autofocus
                     spellcheck="false"
+                    placeholder="Typ je bericht of start met / voor commando's (/help)"
                     @keyup.esc="hideInput"
                     @keyup="keyUp"
                     @keydown="keyDown"
