--- a/html/index.html
+++ b/html/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title></title>
   <link href="vendor/latofonts.css" rel="stylesheet">
-  <link href="vendor/flexboxgrid.6.3.1.min.css" rel="stylesheet"></link>
-  <link href="vendor/animate.3.5.2.min.css" rel="stylesheet"></link>
+  <link href="vendor/flexboxgrid.6.3.1.min.css" rel="stylesheet">
+  </link>
+  <link href="vendor/animate.3.5.2.min.css" rel="stylesheet">
+  </link>
   <!--<link href="./css/index.css" rel="stylesheet"></link>-->
-  <link href="./css/style.css" rel="stylesheet"></link>
+  <link href="./css/style.css" rel="stylesheet">
+  </link>
 
   <script src="vendor/vue.2.3.3.min.js" type="text/javascript"></script>
   <script src="./js/config.default.js" type="text/javascript"></script>
   <script src="./js/config.js" type="text/javascript"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 </head>
+
 <body>
   <div id="app"></div>
 
@@ -23,29 +28,19 @@
       <div class="chat-window" :style="this.style" :class="{ 'fadeOutUp animated': !showWindow, 'hidden': shouldHide }">
         <div class="chat-messages" ref="messages">
           <message v-for="msg in messages"
-                   :templates="templates"
-                   :multiline="msg.multiline"
-                   :args="msg.args"
-                   :color="msg.color"
-                   :template="msg.template"
-                   :template-id="msg.templateId"
-                   :key="msg">
+            :templates="templates"
+            :multiline="msg.multiline"
+            :args="msg.args"
+            :color="msg.color"
+            :template="msg.template"
+            :template-id="msg.templateId"
+            :key="msg">
           </message>
         </div>
       </div>
       <div class="chat-input" v-show="showInput">
         <div>
-          <textarea v-model="message"
-                    ref="input"
-                    type="text"
-                    autofocus
-                    spellcheck="false"
-                    placeholder="Typ je bericht of start met / voor commando's (/help)"
-                    @keyup.esc="hideInput"
-                    @keyup="keyUp"
-                    @keydown="keyDown"
-                    @keypress.enter.prevent="send">
-          </textarea>
+          <textarea v-model="message" ref="input" type="text" autofocus spellcheck="false" placeholder="Typ je bericht of start met / voor commando's (/help)" @keyup.esc="hideInput" @keyup="keyUp" @keydown="keyDown" @keypress.enter.prevent="send">          </textarea>
         </div>
         <suggestions :message="message" :suggestions="suggestions">
         </suggestions>
@@ -95,25 +90,26 @@
 
   <!-- Main Entry -->
   <script type="text/javascript">
-  window.post = (url, data) => {
-    var request = new XMLHttpRequest();
-    request.open('POST', url, true);
-    request.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
-    request.send(data);
-  }
+    window.post = (url, data) => {
+      var request = new XMLHttpRequest();
+      request.open('POST', url, true);
+      request.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
+      request.send(data);
+    }
 
-  const instance = new Vue({
-    el: '#app',
-    render: h => h(APP),
-  });
+    const instance = new Vue({
+      el: '#app',
+      render: h => h(APP),
+    });
 
-  window.emulate = (type, detail = {}) => {
-    detail.type = type;
-    window.dispatchEvent(new CustomEvent('message', {
-      detail,
-    }));
-  };
+    window.emulate = (type, detail = {}) => {
+      detail.type = type;
+      window.dispatchEvent(new CustomEvent('message', {
+        detail,
+      }));
+    };
   </script>
 
 </body>
+
 </html>
